# julie

./: README.md
julie/julie_control/: CMakeLists.txt  julie_ackermann_controller_plugin.xml  package.xml  setup.py
julie/julie_control/config/: control_none.yaml  rqt_multiplot_vel_ctl.xml
julie/julie_control/include/julie_control/: jac_ctl_utils.h  jac_input_manager.h  jac_odometry.h  jac_publisher.h  jac_raw_odom_publisher.h  julie_ackermann_controller.h  julie_hardware_interface.h
julie/julie_control/launch/: control_none.launch
julie/julie_control/msg/: JAC_Debug.msg  RawOdom.msg
julie/julie_control/scripts/: fit_odometry.py  odometry_fit_steering_sensor.py  odometry_fit_steering_sensor_sklearn.py  odometry_fit_steering_sensor_tflearn.py  path_editor  record_odometry.py  test_01_send_ackermann.py  test_02_pure_pursuit.py  test_03_edit_path.py  test_04_random_setpoints.py
julie/julie_control/scripts/two_d_guidance/: path.py
julie/julie_control/src/: jac_ctl_utils.cpp  jac_input_manager.cpp  jac_odometry.cpp  jac_publisher.cpp  jac_raw_odom_publisher.cpp  julie_ackermann_controller.cpp  julie_hardware_interface.cpp
julie/julie_control/src/julie_control/two_d_guidance/: path.py  path_editor.py  path_editor.xml  pure_pursuit.py
julie/julie_description/: CMakeLists.txt  package.xml
julie/julie_description/launch/: description.launch
julie/julie_description/meshes/: wheel.blend  wheel.dae
julie/julie_description/urdf/: base.urdf.xacro  julie.gazebo.xacro  julie.urdf  julie_1.urdf  julie_2.urdf  julie_chassis.urdf.xacro  julie_inertias.urdf.xacro  julie_materials.urdf  julie_wheels.urdf.xacro  sensor_velodyne_vlp16.urdf.xacro  sensors.urdf.xacro  suspension_wheel.urdf.xacro
julie/julie_guidance/: CMakeLists.txt  dumb_global_planner_plugin.xml  package.xml
julie/julie_guidance/cfg/teb/: costmap_common_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
julie/julie_guidance/include/julie_guidance/: dumb_global_planner.h
julie/julie_guidance/launch/: dumb_and_teb_in_stage.launch  move_base_dumb_and_teb.launch
julie/julie_guidance/maps/: maze4.yaml
julie/julie_guidance/scripts/: make_test_path.py  pure_pursuit_node.py
julie/julie_guidance/src/: dumb_global_planner.cpp
julie/julie_guidance/static_plans/: oval.path
julie/julie_misc/: CMakeLists.txt  package.xml  setup.py
julie/julie_misc/src/julie_misc/: __init__.py  algebra.py  fit_trajectories.py  plot_utils.py  three_d_plot.py  utils.py
julie/julie_navigation/: CMakeLists.txt  package.xml
julie/julie_navigation/launch/: hdl_graph_slam_ford.launch  loam_velodyne.launch
julie/julie_navigation/scripts/: fit_loam.py  gps_loam.npz  gps_loam_1.npz  gps_loam_2.npz  record_loam.py
julie/julie_worlds/: CMakeLists.txt  package.xml  setup.py
julie/julie_worlds/config/: ref_enac_outdoor_1.yaml  ref_enac_outdoor_south_east.yaml
julie/julie_worlds/launch/: publish_map.launch  test1.launch
julie/julie_worlds/maps/: enac_full.yaml  enac_outdoor_south_east.yaml
julie/julie_worlds/paths/: path_J_1.kml
julie/julie_worlds/paths/enac_outdoor_south_east/: path_J_1.npz
julie/julie_worlds/scripts/: convert_gps.py  display_gps.py  foo.kml  foo.xml  globalmaptiles.py  test_01_make_google_map.py  test_02_make_path.py  test_03_make_rosmap.py  test_04_make_gazebo_model.py
julie/julie_worlds/src/julie_worlds/: __init__.py
julie_desktop/julie_viz/: package.xml
julie_desktop/julie_viz/launch/: view_model.launch  view_navigation.launch  view_robot.launch
julie_desktop/julie_viz/rviz/: julie.rviz  julie_navigation.rviz  julie_open_loop.rviz  navigation.rviz
julie_onboard/julie_gilbert/: CMakeLists.txt  package.xml
julie_onboard/julie_gilbert/config/: gps_nmea.yaml
julie_onboard/julie_gilbert/launch/: base.launch  record.launch  ublox_gps.launch
julie_onboard/julie_roland/: CMakeLists.txt  package.xml
julie_onboard/julie_roland/launch/: base.launch
julie_simulator/: README.md
julie_simulator/julie_gazebo/: CMakeLists.txt  package.xml
julie_simulator/julie_gazebo/config/: control.yaml  control_julie_2.yaml
julie_simulator/julie_gazebo/launch/: control.launch  control_julie_1.launch  control_julie_2.launch
julie_simulator/julie_gazebo/models/enac_full_ground_plane/: model.config  model.sdf
julie_simulator/julie_gazebo/models/enac_full_ground_plane/materials/scripts/: enac_full_ground_plane.material
julie_simulator/julie_gazebo/models/enac_outdoor_south_east_ground_plane/: model.sdf
julie_simulator/julie_gazebo/models/enac_outdoor_south_east_ground_plane/materials/scripts/: enac_outdoor_south_east_ground_plane.material
julie_simulator/julie_gazebo/worlds/: enac_0.world  enac_outdoor_full.world  enac_south_east.world
julie_simulator/julie_gazebo_ackermann_controller/: CMakeLists.txt  package.xml
julie_simulator/julie_gazebo_ackermann_controller/config/: julie.yaml
julie_simulator/julie_gazebo_ackermann_controller/launch/: julie_gazebo_ackermann_controller.launch
julie_simulator/julie_gazebo_ackermann_controller/scripts/: julie_gazebo_ackermann_controller.py
julie_simulator/julie_gazebo_ackermann_controller/src/: julie_gazebo_ackermann_controller.cpp
julie_simulator/julie_gazebo_bringup/: CMakeLists.txt  package.xml
julie_simulator/julie_gazebo_bringup/launch/: julie_empty_world.launch  julie_enac_south_east.launch  julie_maze.launch
julie_simulator/julie_gazebo_control/: CMakeLists.txt  julie_hardware_interface_gazebo.xml  package.xml
julie_simulator/julie_gazebo_control/include/julie_gazebo_control/: julie_hardware_interface_gazebo.h
julie_simulator/julie_gazebo_control/src/: julie_hardware_interface_gazebo.cpp
julie_simulator/julie_simulations/: CMakeLists.txt  package.xml
julie_simulator/julie_simulations/launch/: pure_pursuit_in_gazebo.launch
julie_simulator/julie_stage/: CMakeLists.txt  package.xml
julie_simulator/julie_stage/robots/: julie.inc
julie_simulator/julie_stage/worlds/: maze.world
