<?xml version="1.0"?>
<package format="2">
  <name>julie_control</name>
  <version>0.0.1</version>
  <description>The julie_control package</description>

  <maintainer email="drouin@recherche.enac.fr">Antoine Drouin</maintainer>

  <license>GNU V3</license>

  <author email="drouin@recherche.enac.fr">Antoine Drouin</author>
  <url type="website">http://wiki.ros.org/julie_control</url>

  <build_depend>message_generation</build_depend>
  <depend>controller_interface</depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  

  
  <export>
    <controller_interface plugin="${prefix}/julie_ackermann_controller_plugin.xml"/>
  </export>
</package>
