<?xml version="1.0"?>
<package>
  <name>julie_gazebo_bringup</name>
  <version>0.0.1</version>
  <description>The julie_gazebo_bringup package</description>

  <maintainer email="drouin@recherche.enac.fr">Antoine Drouin</maintainer>

  <license>BSD</license>

  <author email="drouin@recherche.enac.fr">Antoine Drouin</author>

  <url type="website">http://wiki.ros.org/julie_gazebo_bringup</url>
  <url type="repository">https://github.com/ENAC/julie_gazebo_bringup</url>
  <url type="bugtracker">https://github.com/ENAC/julie_gazebo_bringup/issues</url> -->
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
