<?xml version="1.0"?>
<package>
  <name>julie_stage</name>
  <version>0.0.1</version>
  <description>The julie_stage package</description>

  <maintainer email="drouin@recherche.enac.fr">Antoine Drouin</maintainer>

  <license>BSD</license>

  <author email="drouin@recherche.enac.fr">Antoine Drouin</author>

  <url type="website">http://wiki.ros.org/julie_stage</url>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
